--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,15 @@
 }
 
 html {
-    background-image : url();
     background-repeat: no-repeat;
     background-size: cover;
 }
 header {
   height: 17vh;
-  background-color: #4e050ed2;
+background-color: #e79c2a ;
 }
 header h1 {
-  color: rgb(255, 209, 223);
+  color: #5a3d55;
   font-family: 'Luckiest Guy', cursive;
   font-size: 40px;
   position: absolute;
@@ -25,9 +24,11 @@ header h1 {
 header img {
   position: sticky;
   display: block;
-  width: 7%;;
-  left : 10vw;
+  width: 7%;
+  height: 100%;
+  left : 15vw;
 }
+
 
 main div {
   float : left;
@@ -35,13 +36,14 @@ main div {
 }
 
 #result{
-  background-color: rgba(248, 225, 227, 0.774);
+
+  background-color : #a2de96;
   width:26%;
   height: 75%;
   margin-left: 15px;
-  border: 2px solid rgb(71, 4, 4);
+  border: 2px solid #5a3d55;
   border-radius: 10px;
-
+  
 }
 #result ul {
   margin-top: 10px;
@@ -50,7 +52,7 @@ main div {
   margin-right: 5px;
 }
 ul li {
-  margin-bottom: 3px;
+  margin-bottom: 15px;
   font-family: 'Times New Roman', Times, serif;
 text-align: center;
 font-size: large;
@@ -61,6 +63,7 @@ font-size: large;
 }
 
 h3 {
+  color : #3ca59d;
   text-align: center;
   font-size: 25px;
   font-weight: bolder;
@@ -68,9 +71,17 @@ h3 {
   margin-bottom: 10px;
 }
 #pics img {
-  border: 2px solid rgb(71, 4, 4);
+  border: 2px solid #5a3d55;
   border-radius: 10px;
   width: 260px;
   height: 260px;
   margin-right: 5px;
+}
+
+#chart {
+  position: relative;
+  top: 1vh;
+  left : 10vw;
+  width: 50%;
+  height: 60%;
 }
