--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,24 @@ main div {
   margin-top: 50px;
 }
 
+#resultBtn
+{
+  color: #3ca59d;
+  font-weight: bolder;
+  background-color : cornsilk;
+  width:35%;
+  height: 15%;
+  margin-top: 10px;
+  margin-right: 8px;
+  margin-left: 15px;
+  border: 2px solid #5a3d55;
+  border-radius: 10px;
+  float: right;
+}
+
+#resultBtn:hover{
+  background-color: rgb(252, 236, 172);
+}
 #result{
 
   background-color : #a2de96;
@@ -69,6 +87,7 @@ h3 {
   font-weight: bolder;
   font-family: Georgia, 'Times New Roman', Times, serif;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 #pics img {
   border: 2px solid #5a3d55;
@@ -76,6 +95,10 @@ h3 {
   width: 260px;
   height: 260px;
   margin-right: 5px;
+}
+
+img:hover{
+  opacity: 0.7;
 }
 
 #chart {
